corrected button name

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="./images/resume.gif" class="card-img-top" alt="resume gif">
             <div class="card-body text-center">
               <h5 class="card-title mb-4">Online Resume</h5>
-              <a href="https://avpreetkaur.github.io/Resume/" class="btn btn-primary">Go somewhere</a>
+              <a href="https://avpreetkaur.github.io/Resume/" class="btn btn-primary">View</a>
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
             <img src="./images/happycat.webp" class="card-img-top" alt="happy cat">
             <div class="card-body text-center">
               <h5 class="card-title mb-4">Favourite Moments</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://avpreetkaur.github.io/TheMoments/" class="btn btn-primary">View</a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <img src="./images/writeups.gif" class="card-img-top" alt="cat writing">
             <div class="card-body text-center">
               <h5 class="card-title mb-4">My Writeups</h5>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View</a>
             </div>
           </div>
         </div>
